# scad-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  cube.scad  index.html  norm.bc  norm.scad  scad.ungram  search-index.js  settings.html  source-files.js
crates/bytecode/: Cargo.toml
crates/bytecode/examples/: generate_hello_world.rs
crates/bytecode/src/: disassemble.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: compile.rs  dis.rs  lib.rs  run.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: files.rs  lib.rs  pretty_print.rs  syntax.rs
crates/codegen/src/syntax/: analyse.rs  ast.rs  ast_nodes.rs  mod.rs  scad.ungram  syntax_kind.rs  tokens.rs
crates/codegen/src/syntax/snapshots/: scad_codegen__syntax__ast_nodes__tests__format_scad_ungram.snap  scad_codegen__syntax__ast_nodes__tests__format_scad_ungram.snap.new
crates/compiler/: Cargo.toml
crates/compiler/src/: db.rs  diagnostics.rs  hir.rs  lib.rs  macros.rs  parsing.rs  spans.rs  text.rs
crates/compiler/src/lowering/: basic_blocks.rs  bytecode.rs  items.rs  mod.rs  query.rs  type_inference.rs
crates/compiler/src/lowering/snapshots/: scad_compiler__lowering__bytecode__tests__hello_world.snap.new  scad_compiler__lowering__bytecode__tests__norm_tests.snap  scad_compiler__lowering__bytecode__tests__norm_tests.snap.new  scad_compiler__lowering__bytecode__tests__print_addition_with_variables.snap
crates/compiler/src/parsing/: mod.rs  query.rs
crates/compiler/tests/: upstream.rs
crates/fj-model/: Cargo.toml
crates/fj-model/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: callbacks.rs  context.rs  errors.rs  geometry.rs  lib.rs  prelude.rs  stack.rs  value.rs  vm.rs
crates/runtime/tests/: integration-tests.rs
crates/runtime/tests/run-fail/: add-number-and-list.scad  add-number-and-string.scad  invalid-reference.scad  number-is-not-callable.scad
crates/runtime/tests/run-pass/: simple-arithmetic.scad
crates/runtime/tests/snapshots/: integration_tests__run_fail@invalid-reference.scad.snap  integration_tests__run_pass@empty.scad.snap  integration_tests__run_pass@simple-arithmetic.scad.snap  run_fail@add-number-and-list.scad.snap  run_fail@add-number-and-string.scad.snap  run_fail@invalid-reference.scad.snap  run_fail@number-is-not-callable.scad.snap  run_pass@empty.scad.snap  run_pass@simple-arithmetic.scad.snap
crates/scad/: Cargo.toml
crates/scad/src/: ast.rs  lib.rs  text.rs
crates/scad/src/hir/: id.rs  mod.rs  text.rs  types.rs
crates/scad/src/lexer/: mod.rs
crates/scad/src/lexer/snapshots/: scad__lexer__tests__example_program.snap
crates/scad/src/lowering/: mod.rs  query.rs
crates/scad/src/runtime/: mod.rs
crates/scad/src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  query.rs  scad.ungrammar
crates/scad/src/syntax/snapshots/: scad__syntax__lexer__tests__example_program.snap  scad__syntax__tests__example_program.snap
crates/scad/tests/: integration-test.rs  upstream.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lexer.rs  lib.rs  methods.rs  parser.rs  syntax_kind.rs
crates/syntax/src/grammar/: expressions.rs  macros.rs  mod.rs  token_set.rs  top_level.rs
crates/syntax/src/grammar/snapshots/: scad_syntax__grammar__expressions__tests__basic_list_comprehension.snap  scad_syntax__grammar__expressions__tests__dotted_variable_lookup.snap  scad_syntax__grammar__expressions__tests__expr_add.snap  scad_syntax__grammar__expressions__tests__expr_add_and_mul_with_parens.snap  scad_syntax__grammar__expressions__tests__expr_add_and_mul_with_precedence.snap  scad_syntax__grammar__expressions__tests__expr_add_and_subtract.snap  scad_syntax__grammar__expressions__tests__expr_div.snap  scad_syntax__grammar__expressions__tests__expr_mul.snap  scad_syntax__grammar__expressions__tests__expr_mul_and_add_with_precedence.snap  scad_syntax__grammar__expressions__tests__expr_sub.snap  scad_syntax__grammar__expressions__tests__false_expr.snap  scad_syntax__grammar__expressions__tests__function_call.snap  scad_syntax__grammar__expressions__tests__function_call_with_multiple_arguments.snap  scad_syntax__grammar__expressions__tests__function_call_with_named_arguments.snap  scad_syntax__grammar__expressions__tests__function_call_with_single_arg.snap  scad_syntax__grammar__expressions__tests__list_atom.snap  scad_syntax__grammar__expressions__tests__list_comprehension_nested_loops.snap  scad_syntax__grammar__expressions__tests__list_comprehension_with_if_and_let.snap  scad_syntax__grammar__expressions__tests__negative_number.snap  scad_syntax__grammar__expressions__tests__not.snap  scad_syntax__grammar__expressions__tests__one_plus_one.snap  scad_syntax__grammar__expressions__tests__parens.snap  scad_syntax__grammar__expressions__tests__positive_number.snap  scad_syntax__grammar__expressions__tests__precedence_kitchen_sink.snap  scad_syntax__grammar__expressions__tests__range_atom.snap  scad_syntax__grammar__expressions__tests__range_expr.snap  scad_syntax__grammar__expressions__tests__range_expr_with_step.snap  scad_syntax__grammar__expressions__tests__single_number.snap  scad_syntax__grammar__expressions__tests__string_expr.snap  scad_syntax__grammar__expressions__tests__ternary_expr.snap  scad_syntax__grammar__expressions__tests__true_expr.snap  scad_syntax__grammar__expressions__tests__unary_negative.snap  scad_syntax__grammar__expressions__tests__unary_negative_with_expr.snap  scad_syntax__grammar__expressions__tests__unary_not.snap  (+26 more)
crates/syntax/src/snapshots/: scad_syntax__lexer__tests__example_program.snap
xtask/: Cargo.toml  all.html  enum.Cmd.html  fn.main.html  fn.project_root.html  index.html  sidebar-items.js  struct.Fixtures.html
xtask/compatibility/: constant.SKIP_TOKENIZING.html  enum.Outcome.html  fn.check_inputs.html  fn.globs.html  index.html  sidebar-items.js  struct.Callbacks.html  struct.Compatibility.html  struct.CompatibilityReport.html  struct.Input.html  struct.Report.html
xtask/repo/: index.html  sidebar-items.js  struct.CommandFailed.html  struct.Fixtures.html
xtask/src/: compatibility.rs  main.rs  repo.rs
(+15116 files in other folders)
