[package]
name = "scad-bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }

[dev-dependencies]
clap = { version = "3.2.17", features = ["env"] }
anyhow = "1.0.61"
