[package]
name = "scad-cli"
version = "0.1.0"
edition = "2021"
default-run = "scad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["env", "derive"] }
scad-bytecode = { version = "0.1.0", path = "../bytecode" }
scad-compiler = { version = "0.1.0", path = "../compiler" }
scad-runtime = { version = "0.1.0", path = "../runtime" }
