[package]
name = "scad-codegen"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
heck = "0.4.0"
proc-macro2 = "1.0.42"
quote = "1.0.20"
tracing = "0.1.35"
ungrammar = "1.16.1"

[dev-dependencies]
insta = "1.17.1"
