[package]
name = "scad-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
noisy_float = "0.2.0"
rowan = "0.15.8"
salsa = "0.16.1"
scad-syntax = { version = "0.1.0", path = "../syntax" }
