[package]
name = "scad-fj-model"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fj = "0.11.0"
scad-interpreter = { version = "0.1.0", path = "../interpreter" }
scad-syntax = { version = "0.1.0", path = "../syntax" }
