[package]
name = "scad-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scad-bytecode = { version = "0.1.0", path = "../bytecode" }
tracing = "0.1.36"

[dev-dependencies]
insta = { version = "1.17.0", features = ["glob"] }
scad-compiler = { path = "../compiler" }
serde = { version = "1.0.144", features = ["derive"] }
