[package]
name = "scad"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/scad-rs.git"
edition = "2021"
rust-version = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
