[package]
name = "scad"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-F-Bryan/scad-rs.git"
edition = "2021"
rust-version = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
m_lexer = "0.0.4"
noisy_float = "0.2.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.13.0"
rowan = "0.15.8"
salsa = "0.16.1"

[dev-dependencies]
insta = "1.16.0"
walkdir = "2.3.2"
