[package]
name = "scad-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m_lexer = "0.0.4"
once_cell = "1.13.0"
rowan = "0.15.8"
tracing = "0.1.36"

[dev-dependencies]
insta = "1.17.0"
scad-codegen = { path = "../codegen" }
tracing-subscriber = "0.3.14"
